@@ -16,6 +16,7 @@
 * Fix - Deleting customer on staging site detaches tokens from customer in Stripe.
 * Fix - Resolved an issue preventing changing a subscriptions payment method when UPE is enabled.
 * Fix - Send customer billing and address details to Stripe when changing a subscriptions payment method.
+* Add - Attach billing details to customers created in Stripe to support Indian merchants in processing international transactions.
 
 = 7.6.2 - 2023-10-31 =
 * Deprecate - Remove Sofort support for new accounts.
